# repopilot

./: .env.example  ARCHITECTURE_REVIEW.md  BUGLOG.md  DATA_STRATEGY.md  Dockerfile  README.md  STRATEGY.md  pyproject.toml  requirements.txt  run_trace.py  test_intelligent_agent.py
.github/workflows/: ci.yml
data/: README.md
data/samples/: issues_fixes.jsonl
docs/: COMPETITIVE_ANALYSIS.md  PRODUCTION_PLAN.md  PRODUCT_POSITIONING.md  RESUME_STRATEGY.md
eval/: agent_v2_harness.py  eval_results.json  eval_summary.md  harness.py  report.py
examples/: candidate_issues.md
examples/traces/: case_1.json
src/: agent.py  cache.py  cli.py  graph.py  http_client.py  llm.py  main.py  new_agent.py  run_store.py  schemas.py  state.py  tools.py  tracer.py
src/memory/: __init__.py  repo_store.py
src/nodes/: execute.py  locate.py  plan.py  reflect.py  understand.py  verify.py
tests/: conftest.py  test_agent_v2_eval.py  test_decision_frame.py  test_decision_schemas.py  test_eval_report.py  test_http_client.py  test_llm.py  test_main.py  test_memory.py  test_new_agent.py  test_run_store.py  test_tools.py  test_tracer.py
