[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "repopilot"
version = "0.1.0"
description = "AI-powered GitHub issue → fix PR, with self-reflective agent loop"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "httpx",
    "pydantic",
    "python-dotenv",
    "uvicorn",
    "langgraph",
]

[project.scripts]
repopilot = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]
